compiler/tests/success/slh/x86-64/protect_128.jazz
export
fn foo (reg u128 x) -> reg u128 {
    #[nospill] reg u64 msf;
    msf = #init_msf();

    reg u128 y;
    y = #protect_128(x, msf);

    return y;
}
