compiler/tests/fail/typing/x86-64/swap.jazz
export fn main (reg u64 x, reg u32 y) -> reg u64 {
  x, y = #swap(x, x);
  return x;
}
